Spacing fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,7 +51,7 @@ header h2 {
 
 .intro {
     font-weight: 400; /* Regular */
-    margin: 20px 0;
+    margin: 2rem 0;
     font-size: 2.5rem;
 }
 
